# wherefrom

./: .bugradar.md  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  test.yml
src/: lib.rs  main.rs  origins.rs  parser.rs  printer.rs
tests/: integration_spotlight.rs
