[package]
name = "wherefrom"
description = "Display file origin URL(s) from Spotlight metadata."
version = "0.1.2"
edition = "2024"
authors = ["Arnaud 'red' Rouyer"]
repository = "https://github.com/joshleaves/wherefrom"
license = "MIT"

[[bin]]
name = "wherefrom"
path = "src/main.rs"
doc = false
doctest = false
test = false

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
objc2-core-foundation = "0.3.2"
mdquery-rs = "0.2.1"
